--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: Poole
-tagline: The Jekyll Butler
+title: Blog Of Enterprise Application Design
+tagline: Written by Young
 url: https://getpoole.com
 paginate: 1
 baseurl: ""
