--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title: Blog Of Enterprise Application Design
+title: Blog of Design
 tagline: Written by Young
 url: https://getpoole.com
 paginate: 1
